intel_extreme: sanitize BIOS mode.

* For LVDS output, the sync parameters aren't really used which is why the mode
  set from the BIOS might not be valid if the PLL hardware would actually be
  used.
* Therefore, we sanitize this mode to make sure it's within allowed parameters
  so that intel_set_mode() will accept it.
* This should fix at least #8132, and #8796.
* Sorry for looking into this so late! I obviously messed up testing this
  before, as my EeePC 900 was actually affected by this, too.